--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.181.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.3.5",
